--- a/sensing_MUSIC.ipynb
+++ b/sensing_MUSIC.ipynb
@@ -1423,7 +1423,7 @@
     "tau_j = tf.transpose(tau_i)\n",
     "tau_i_mine_j = tau_i- tau_j\n",
     "tau_i_mul_j = tau_i* tau_j\n",
-    "B_1 = tf.reshape(H_H, [l,1]) @ tf.reshape(H, [1,l])\n",
+    "B_1 = tf.reshape(H_H, [length,1]) @ tf.reshape(H, [1,length])\n",
     "one = tf.ones((length,length))\n",
     "real = one + 4*(np.pi**2)*(scene.frequency **2) * tau_i_mul_j\n",
     "img = 2*np.pi*scene.frequency *tau_i_mine_j\n",
