--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,13 +651,326 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SceneParameters[\n",
+       "  ----------------------------------------------------------------------------------------------\n",
+       "  Name                                       Flags    Type           Parent\n",
+       "  ----------------------------------------------------------------------------------------------\n",
+       "  camera.near_clip                                    float          PerspectiveCamera\n",
+       "  camera.far_clip                                     float          PerspectiveCamera\n",
+       "  camera.shutter_open                                 float          PerspectiveCamera\n",
+       "  camera.shutter_open_time                            float          PerspectiveCamera\n",
+       "  camera.film.size                                    ScalarVector2u HDRFilm\n",
+       "  camera.film.crop_size                               ScalarVector2u HDRFilm\n",
+       "  camera.film.crop_offset                             ScalarPoint2u  HDRFilm\n",
+       "  camera.x_fov                               ∂, D     Float          PerspectiveCamera\n",
+       "  camera.principal_point_offset_x            ∂, D     Float          PerspectiveCamera\n",
+       "  camera.principal_point_offset_y            ∂, D     Float          PerspectiveCamera\n",
+       "  camera.to_world                            ∂, D     Transform4f    PerspectiveCamera\n",
+       "  emit-light.sampling_weight                          float          DirectionalEmitter\n",
+       "  emit-light.irradiance.value                ∂        Color3f        SRGBReflectanceSpectrum\n",
+       "  emit-light.to_world                                 Transform4f    DirectionalEmitter\n",
+       "  mat-itu_concrete.reflectance.value         ∂        Color3f        SRGBReflectanceSpectrum\n",
+       "  mat-itu_glass.reflectance.value            ∂        Color3f        SRGBReflectanceSpectrum\n",
+       "  mat-itu_plywood.reflectance.value          ∂        Color3f        SRGBReflectanceSpectrum\n",
+       "  mesh-ceiling.silhouette_sampling_weight             float          PLYMesh\n",
+       "  mesh-ceiling.faces                                  UInt           PLYMesh\n",
+       "  mesh-ceiling.vertex_positions              ∂, D     Float          PLYMesh\n",
+       "  mesh-ceiling.vertex_normals                ∂, D     Float          PLYMesh\n",
+       "  mesh-ceiling.vertex_texcoords              ∂        Float          PLYMesh\n",
+       "  mesh-door.silhouette_sampling_weight                float          PLYMesh\n",
+       "  mesh-door.faces                                     UInt           PLYMesh\n",
+       "  mesh-door.vertex_positions                 ∂, D     Float          PLYMesh\n",
+       "  mesh-door.vertex_normals                   ∂, D     Float          PLYMesh\n",
+       "  mesh-door.vertex_texcoords                 ∂        Float          PLYMesh\n",
+       "  mesh-floor.silhouette_sampling_weight               float          PLYMesh\n",
+       "  mesh-floor.faces                                    UInt           PLYMesh\n",
+       "  mesh-floor.vertex_positions                ∂, D     Float          PLYMesh\n",
+       "  mesh-floor.vertex_normals                  ∂, D     Float          PLYMesh\n",
+       "  mesh-floor.vertex_texcoords                ∂        Float          PLYMesh\n",
+       "  mesh-table1.silhouette_sampling_weight              float          PLYMesh\n",
+       "  mesh-table1.faces                                   UInt           PLYMesh\n",
+       "  mesh-table1.vertex_positions               ∂, D     Float          PLYMesh\n",
+       "  mesh-table1.vertex_normals                 ∂, D     Float          PLYMesh\n",
+       "  mesh-table1.vertex_texcoords               ∂        Float          PLYMesh\n",
+       "  mesh-table2.silhouette_sampling_weight              float          PLYMesh\n",
+       "  mesh-table2.faces                                   UInt           PLYMesh\n",
+       "  mesh-table2.vertex_positions               ∂, D     Float          PLYMesh\n",
+       "  mesh-table2.vertex_normals                 ∂, D     Float          PLYMesh\n",
+       "  mesh-table2.vertex_texcoords               ∂        Float          PLYMesh\n",
+       "  mesh-table3.silhouette_sampling_weight              float          PLYMesh\n",
+       "  mesh-table3.faces                                   UInt           PLYMesh\n",
+       "  mesh-table3.vertex_positions               ∂, D     Float          PLYMesh\n",
+       "  mesh-table3.vertex_normals                 ∂, D     Float          PLYMesh\n",
+       "  mesh-table3.vertex_texcoords               ∂        Float          PLYMesh\n",
+       "  mesh-table4.silhouette_sampling_weight              float          PLYMesh\n",
+       "  mesh-table4.faces                                   UInt           PLYMesh\n",
+       "  mesh-table4.vertex_positions               ∂, D     Float          PLYMesh\n",
+       "  mesh-table4.vertex_normals                 ∂, D     Float          PLYMesh\n",
+       "  mesh-table4.vertex_texcoords               ∂        Float          PLYMesh\n",
+       "  mesh-table5.silhouette_sampling_weight              float          PLYMesh\n",
+       "  mesh-table5.faces                                   UInt           PLYMesh\n",
+       "  mesh-table5.vertex_positions               ∂, D     Float          PLYMesh\n",
+       "  mesh-table5.vertex_normals                 ∂, D     Float          PLYMesh\n",
+       "  mesh-table5.vertex_texcoords               ∂        Float          PLYMesh\n",
+       "  mesh-tv.silhouette_sampling_weight                  float          PLYMesh\n",
+       "  mesh-tv.faces                                       UInt           PLYMesh\n",
+       "  mesh-tv.vertex_positions                   ∂, D     Float          PLYMesh\n",
+       "  mesh-tv.vertex_normals                     ∂, D     Float          PLYMesh\n",
+       "  mesh-tv.vertex_texcoords                   ∂        Float          PLYMesh\n",
+       "  mesh-tvstand.silhouette_sampling_weight             float          PLYMesh\n",
+       "  mesh-tvstand.faces                                  UInt           PLYMesh\n",
+       "  mesh-tvstand.vertex_positions              ∂, D     Float          PLYMesh\n",
+       "  mesh-tvstand.vertex_normals                ∂, D     Float          PLYMesh\n",
+       "  mesh-tvstand.vertex_texcoords              ∂        Float          PLYMesh\n",
+       "  mesh-wall1.silhouette_sampling_weight               float          PLYMesh\n",
+       "  mesh-wall1.faces                                    UInt           PLYMesh\n",
+       "  mesh-wall1.vertex_positions                ∂, D     Float          PLYMesh\n",
+       "  mesh-wall1.vertex_normals                  ∂, D     Float          PLYMesh\n",
+       "  mesh-wall1.vertex_texcoords                ∂        Float          PLYMesh\n",
+       "  mesh-wall2.silhouette_sampling_weight               float          PLYMesh\n",
+       "  mesh-wall2.faces                                    UInt           PLYMesh\n",
+       "  mesh-wall2.vertex_positions                ∂, D     Float          PLYMesh\n",
+       "  mesh-wall2.vertex_normals                  ∂, D     Float          PLYMesh\n",
+       "  mesh-wall2.vertex_texcoords                ∂        Float          PLYMesh\n",
+       "  mesh-wall3.silhouette_sampling_weight               float          PLYMesh\n",
+       "  mesh-wall3.faces                                    UInt           PLYMesh\n",
+       "  mesh-wall3.vertex_positions                ∂, D     Float          PLYMesh\n",
+       "  mesh-wall3.vertex_normals                  ∂, D     Float          PLYMesh\n",
+       "  mesh-wall3.vertex_texcoords                ∂        Float          PLYMesh\n",
+       "  mesh-wall4.silhouette_sampling_weight               float          PLYMesh\n",
+       "  mesh-wall4.faces                                    UInt           PLYMesh\n",
+       "  mesh-wall4.vertex_positions                ∂, D     Float          PLYMesh\n",
+       "  mesh-wall4.vertex_normals                  ∂, D     Float          PLYMesh\n",
+       "  mesh-wall4.vertex_texcoords                ∂        Float          PLYMesh\n",
+       "]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mitsuba as mi\n",
+    "scene_params = mi.traverse(scene._scene)\n",
+    "scene_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PLYMesh[\n",
+       "  name = \"human1.ply\",\n",
+       "  bbox = BoundingBox3f[\n",
+       "    min = [-3.68708, 1.85568, -0.0123519],\n",
+       "    max = [-3.0576, 2.51166, 2.42912]\n",
+       "  ],\n",
+       "  vertex_count = 14,\n",
+       "  vertices = [448 B of vertex data],\n",
+       "  face_count = 12,\n",
+       "  faces = [144 B of face data],\n",
+       "  face_normals = 0\n",
+       "]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "human = mi.load_dict({'type': 'ply',\n",
+    "                    'filename': './scenes/Indoor/meshes/human1.ply'})\n",
+    "human"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "227"
+       "[PLYMesh[\n",
+       "   name = \"ceiling.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-5, -3, 3.5],\n",
+       "     max = [5, 3, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"door.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-4.51779, 1.56861, -0.00357819],\n",
+       "     max = [-4.04366, 3.04818, 3.14076]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"floor.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-5, -3, 0],\n",
+       "     max = [5, 3, 0]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table1.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-1.95782, -1.07471, 1.20652],\n",
+       "     max = [1.95782, 0.925293, 1.31491]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table2.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [1.56954, 0.656094, -0.0107086],\n",
+       "     max = [1.66954, 0.756094, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table3.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [1.56954, -0.911111, -0.0107086],\n",
+       "     max = [1.66954, -0.811111, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table4.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-1.59438, -0.911111, -0.0107086],\n",
+       "     max = [-1.49438, -0.811111, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table5.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-1.59438, 0.707869, -0.0107086],\n",
+       "     max = [-1.49438, 0.807869, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"tv.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [4.88148, -1.40446, 0.930642],\n",
+       "     max = [5.02148, 1.37563, 2.66372]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"tvstand.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [4.22092, -1.5937, -0.0371973],\n",
+       "     max = [5.03519, 1.56487, 0.944562]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall1.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-5, -3, 0],\n",
+       "     max = [5, -3, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall2.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-5, 3, 0],\n",
+       "     max = [5, 3, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall3.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [5, -3, 0],\n",
+       "     max = [5, 3, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall4.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-5, -3, 0],\n",
+       "     max = [-5, 3, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ]]"
       ]
      },
      "execution_count": 6,
@@ -666,7 +979,7 @@
     }
    ],
    "source": [
-    "np.argmin(mse)"
+    "scene._scene.shapes()"
    ]
   }
  ],
